<resources>
    <string name="app_name">Bill Please</string>
    <string name="amt">Amount</string>
    <string name="nop">Num of Pax</string>
    <string name="svsDisabled">No SVS</string>
    <string name="svsEnabled">SVS</string>
    <string name="gstDisabled">No GST</string>
    <string name="gstEnabled">GST</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="dis">Discount (%)</string>

</resources>
